@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FTN NetMail/EchoMail
  *
- * $Id: areafix.c,v 1.13 2004/03/24 18:47:19 rusfidogate Exp $
+ * $Id: areafix.c,v 1.14 2004/03/29 22:54:24 rusfidogate Exp $
  *
  * Common Areafix functions
  *
@@ -2647,12 +2647,17 @@ short int rulesup(char *rulesc)
 		    fclose(fp);
 		    if(p)
 		    {
-			p = strchr(p, ':')+1;
-			if( (s = strtok(p, " \t")) )
+			if(strchr(p, ':'))
 			{
-			    BUF_COPY4(buffer, s, "\t", buf, "\n");
-			    fputs(buffer, fp1);
+			    p = strchr(p, ':')+1;
+			    if( (s = strtok(p, " \t")) )
+			    {
+				BUF_COPY4(buffer, s, "\t", buf, "\n");
+				fputs(buffer, fp1);
+			    }
 			}
+			else
+			    fglog("WARNING: rulesfile %s is broken", buf);
 		    }
 		}
 	}
